Tesitng how to get the updates in out cloned proj

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   Welcome to the basic website design tutorial.
+  In this lecture we will check how we are creating websites.
 </body>
 
 </html>
