Showing Difference Between GET and POST

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <body>
   Welcome to the basic website design tutorial.
   In this lecture we will check how we are creating websites.
+
+  Project
+  - images
+  - Css
+  - JS
+  - PHP+HTML
 </body>
 
 </html>
