--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
   - Css
   - JS
   - PHP+HTML
+
+  What we have covered:
+  - How we palce diffent files in different folder.
+  - How to use favicon.
+  - How to create an HTML Form, so we can get the user data.
+  - How to display user inputed data.
+  - Difference between GET AND POST.
 </body>
 
 </html>
