How to use Bootstrap and design login Design From Scratch

--- a/index.html
+++ b/index.html
@@ -19,11 +19,21 @@
   - PHP+HTML
 
   What we have covered:
-  - How we palce diffent files in different folder.
+  - How we place different files in different folder.
   - How to use favicon.
   - How to create an HTML Form, so we can get the user data.
   - How to display user inputed data.
   - Difference between GET AND POST.
+
+  What we have covered:
+  - Created Login Form Basic + Using Other form Design.
+  - How to check the sucess and fail attemps.
+  - How to redirect the page.
+
+  What we have covered:
+  - How to use bootstrap?
+
+
 </body>
 
 </html>
